--- a/blocks/edit-button/edit-button.css
+++ b/blocks/edit-button/edit-button.css
@@ -2,14 +2,15 @@
   width: 18px;
   height: 18px;
   border: 1px solid #FFFFFF;
-  background: url('data:image/svg+xml;utf8,<svg class="edit-button" width="7.5" height="7.5" viewBox="0 0 10 10" fill="white" xmlns="http://www.w3.org/2000/svg"><path d="M10 1.32827L2.60377 8.7666L1.28302 7.41936L8.66038 0L10 1.32827ZM0 10L1.96226 9.41177L0.584906 8.08349L0 10Z"/></svg>');
+  background-image: url('data:image/svg+xml;utf8,<svg class="edit-button" width="7.5" height="7.5" viewBox="0 0 10 10" fill="white" xmlns="http://www.w3.org/2000/svg"><path d="M10 1.32827L2.60377 8.7666L1.28302 7.41936L8.66038 0L10 1.32827ZM0 10L1.96226 9.41177L0.584906 8.08349L0 10Z"/></svg>');
   background-repeat: no-repeat;
   background-position: center;
+  background-color: #000000;
 }
 .edit-button:hover {
   cursor: pointer;
   border: 1px solid rgba(255, 255, 255, 0.6);
-  background: url('data:image/svg+xml;utf8,<svg class="edit-button" width="7.5" height="7.5" viewBox="0 0 10 10" fill="rgba(255, 255, 255, 0.6)" xmlns="http://www.w3.org/2000/svg"><path d="M10 1.32827L2.60377 8.7666L1.28302 7.41936L8.66038 0L10 1.32827ZM0 10L1.96226 9.41177L0.584906 8.08349L0 10Z"/></svg>');
+  background-image: url('data:image/svg+xml;utf8,<svg class="edit-button" width="7.5" height="7.5" viewBox="0 0 10 10" fill="rgba(255, 255, 255, 0.6)" xmlns="http://www.w3.org/2000/svg"><path d="M10 1.32827L2.60377 8.7666L1.28302 7.41936L8.66038 0L10 1.32827ZM0 10L1.96226 9.41177L0.584906 8.08349L0 10Z"/></svg>');
   background-repeat: no-repeat;
   background-position: center;
 }
@@ -18,12 +19,12 @@
   .edit-button {
     width: 24px;
     height: 24px;
-    background: url('data:image/svg+xml;utf8,<svg class="edit-button" width="10" height="10" viewBox="0 0 10 10" fill="white" xmlns="http://www.w3.org/2000/svg"><path d="M10 1.32827L2.60377 8.7666L1.28302 7.41936L8.66038 0L10 1.32827ZM0 10L1.96226 9.41177L0.584906 8.08349L0 10Z"/></svg>');
+    background-image: url('data:image/svg+xml;utf8,<svg class="edit-button" width="10" height="10" viewBox="0 0 10 10" fill="white" xmlns="http://www.w3.org/2000/svg"><path d="M10 1.32827L2.60377 8.7666L1.28302 7.41936L8.66038 0L10 1.32827ZM0 10L1.96226 9.41177L0.584906 8.08349L0 10Z"/></svg>');
     background-repeat: no-repeat;
     background-position: center;
   }
   .edit-button:hover {
-    background: url('data:image/svg+xml;utf8,<svg class="edit-button" width="10" height="10" viewBox="0 0 10 10" fill="rgba(255, 255, 255, 0.6)" xmlns="http://www.w3.org/2000/svg"><path d="M10 1.32827L2.60377 8.7666L1.28302 7.41936L8.66038 0L10 1.32827ZM0 10L1.96226 9.41177L0.584906 8.08349L0 10Z"/></svg>');
+    background-image: url('data:image/svg+xml;utf8,<svg class="edit-button" width="10" height="10" viewBox="0 0 10 10" fill="rgba(255, 255, 255, 0.6)" xmlns="http://www.w3.org/2000/svg"><path d="M10 1.32827L2.60377 8.7666L1.28302 7.41936L8.66038 0L10 1.32827ZM0 10L1.96226 9.41177L0.584906 8.08349L0 10Z"/></svg>');
     background-repeat: no-repeat;
     background-position: center;
   }
